@@ -231,7 +231,7 @@ jQuery(document).ready(function($) {
         } else if (i == 4 || i == 5) {
             submissionsDataTableColumnDefs.push({"sClass": "right", "aTargets": [ i ]});
         } else if ((i == 7 && showOrigReport) || ((i == 7 && !showOrigReport) || (i == 9 && useGrademark))) {
-            submissionsDataTableColumnDefs.push({"sClass": "right", "aTargets": [ i ], "iDataSort": [ i-1 ], "sType":"numeric"});
+            submissionsDataTableColumnDefs.push({"sClass": "right", "aTargets": [ i ], "iDataSort": i-1, "sType":"numeric"});
         } else if (i == 1 || ((i >= 6 && !showOrigReport && !useGrademark)
                                 || (i >= 8 && ((!showOrigReport && useGrademark) || (showOrigReport && !useGrademark))) 
                                 || (i >= 10 && showOrigReport && useGrademark))) {
